--- a/app/src/main/res/layout/view_item_dynamic.xml
+++ b/app/src/main/res/layout/view_item_dynamic.xml
@@ -9,7 +9,6 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/dp15">
 
-
         <ImageView
             android:id="@+id/dynamicUserHeadImg"
             android:layout_width="@dimen/dp40"
@@ -83,7 +82,7 @@
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:scaleType="centerCrop"
-                android:src="@mipmap/icon_share_red" />
+                android:src="@mipmap/icon_shared" />
 
 
             <TextView
@@ -106,14 +105,14 @@
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:scaleType="centerCrop"
-                android:src="@mipmap/icon_share_red" />
+                android:src="@mipmap/icon_comment_img" />
 
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/dp4"
-                android:text="分享" />
+                android:text="评论" />
 
         </LinearLayout>
 
@@ -126,17 +125,18 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/praisedImg"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:scaleType="centerCrop"
-                android:src="@mipmap/icon_share_red" />
+                android:src="@mipmap/icon_unpraised" />
 
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/dp4"
-                android:text="分享" />
+                android:text="点赞" />
 
         </LinearLayout>
 
