--- a/common-library/src/main/res/layout/acitivyt_base.xml
+++ b/common-library/src/main/res/layout/acitivyt_base.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/baseContainerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/transparent"
+    android:background="#f3f5fa"
     android:fitsSystemWindows="false"
     android:orientation="vertical">
 
