--- a/common-library/src/main/res/values/colors.xml
+++ b/common-library/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="color_fb435b">#fb435b</color>
     <color name="color_fc4d5e">#fc4d5e</color>
     <color name="color_fd5862">#fd5862</color>
+    <color name="color_f3f5fa">#f3f5fa</color>
 </resources>
