--- a/app/src/main/res/layout/fragment_talent_mine.xml
+++ b/app/src/main/res/layout/fragment_talent_mine.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/color_ffffff"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -12,8 +13,8 @@
 
         <ImageView
             android:id="@+id/talentMineSettingImg"
-            android:layout_width="@dimen/dp30"
-            android:layout_height="@dimen/dp30"
+            android:layout_width="@dimen/dp25"
+            android:layout_height="@dimen/dp25"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/dp15"
@@ -22,8 +23,8 @@
 
         <ImageView
             android:id="@+id/talentMineMsgImg"
-            android:layout_width="@dimen/dp30"
-            android:layout_height="@dimen/dp30"
+            android:layout_width="@dimen/dp25"
+            android:layout_height="@dimen/dp25"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="@dimen/dp15"
@@ -32,8 +33,8 @@
 
         <ImageView
             android:id="@+id/talentMineEditImg"
-            android:layout_width="@dimen/dp30"
-            android:layout_height="@dimen/dp30"
+            android:layout_width="@dimen/dp25"
+            android:layout_height="@dimen/dp25"
             android:layout_centerVertical="true"
             android:layout_marginRight="@dimen/dp15"
             android:layout_toLeftOf="@id/talentMineMsgImg"
@@ -71,7 +72,21 @@
                 android:textSize="@dimen/sp_14"
                 android:textStyle="bold" />
 
+
             <TextView
+                android:id="@+id/mineLoginTxt"
+                android:layout_width="105dp"
+                android:layout_height="32dp"
+                android:layout_centerInParent="true"
+                android:background="@drawable/shape_btn_mine_login_btn"
+                android:gravity="center"
+                android:text="登陆/注册"
+                android:textColor="#fff"
+                android:textSize="18sp"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/talentUserSignTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/mineNickNameTxt"
