关注达人，推荐关注达人，视频动态

--- a/app/src/main/res/layout/fragment_dynamic.xml
+++ b/app/src/main/res/layout/fragment_dynamic.xml
@@ -43,60 +43,56 @@
 
         </LinearLayout>
 
-        <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@+id/dynamicSwipRefreshLayout"
+        <ru.noties.scrollable.ScrollableLayout
+            android:id="@+id/scrollable_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            app:scrollable_autoMaxScroll="true"
+            app:scrollable_defaultCloseUp="true">
 
-            <ru.noties.scrollable.ScrollableLayout
-                android:id="@+id/scrollable_layout"
+            <com.youth.banner.Banner
+                android:id="@+id/headerBanner"
+                android:layout_width="match_parent"
+                android:layout_height="180dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <xkh.hzp.xkh.com.base.view.PagerSlidingTabStrip
+                    android:id="@+id/tabs"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp45"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginLeft="@dimen/dp40"
+                    android:layout_marginRight="@dimen/dp40"
+                    app:pstsDividerColor="@android:color/transparent"
+                    app:pstsIndicatiorWidth="@dimen/dp40"
+                    app:pstsIndicatorColor="@color/color_e80036"
+                    app:pstsIndicatorHeight="@dimen/dp2"
+                    app:pstsShouldExpand="true"
+                    app:pstsTextColor="@color/color_666666"
+                    app:selectedTabTextColor="@color/color_1f1f1f" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0.75dp"
+                    android:layout_marginTop="@dimen/dp2"
+                    android:background="#dadada" />
+
+            </LinearLayout>
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/view_pager"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:scrollable_autoMaxScroll="true"
-                app:scrollable_defaultCloseUp="true">
-
-                <com.youth.banner.Banner
-                    android:id="@+id/headerBanner"
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <xkh.hzp.xkh.com.base.view.PagerSlidingTabStrip
-                        android:id="@+id/tabs"
-                        android:layout_width="wrap_content"
-                        android:layout_height="@dimen/dp45"
-                        android:layout_gravity="center_horizontal"
-                        app:pstsIndicatiorWidth="@dimen/dp30"
-                        app:pstsIndicatorColor="@color/color_ff5555"
-                        app:pstsIndicatorHeight="1dp"
-                        app:pstsTextColor="@color/color_666666"
-                        app:selectedTabTextColor="@color/color_ff5555" />
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0.75dp"
-                        android:layout_marginTop="@dimen/dp2"
-                        android:background="#dadada" />
-
-                </LinearLayout>
+                android:layout_marginTop="@dimen/dp45" />
 
 
-                <android.support.v4.view.ViewPager
-                    android:id="@+id/view_pager"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="@dimen/dp45" />
-
-
-            </ru.noties.scrollable.ScrollableLayout>
-
-        </android.support.v4.widget.SwipeRefreshLayout>
+        </ru.noties.scrollable.ScrollableLayout>
 
     </LinearLayout>
 
