--- a/app/src/main/res/layout/view_item_video_dynamic.xml
+++ b/app/src/main/res/layout/view_item_video_dynamic.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -51,14 +50,28 @@
         android:textColor="@color/color_666666"
         android:textSize="@dimen/sp_14" />
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/dynamicImgContentLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/dp15"
-        android:orientation="horizontal">
+        android:layout_height="200dp"
+        android:layout_margin="@dimen/dp15">
 
-    </LinearLayout>
+
+        <ImageView
+            android:id="@+id/videoDynamicFaceurlImg"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/example" />
+
+        <ImageView
+            android:id="@+id/videoPlayIconImg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:src="@mipmap/ic_media_play" />
+
+    </RelativeLayout>
 
 
     <LinearLayout
@@ -130,7 +143,6 @@
                 android:layout_height="20dp"
                 android:scaleType="centerCrop"
                 android:src="@mipmap/icon_unpraised" />
-
 
             <TextView
                 android:layout_width="wrap_content"
