--- a/common-library/src/main/res/values/colors.xml
+++ b/common-library/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="color_fc4d5e">#fc4d5e</color>
     <color name="color_fd5862">#fd5862</color>
     <color name="color_f3f5fa">#f3f5fa</color>
+    <color name="color_e80036">#e80036</color>
+    <color name="color_1f1f1f">#1f1f1f</color>
+    <color name="color_f1f1f1">#f1f1f1</color>
 </resources>
