--- a/common-library/src/main/res/values/colors.xml
+++ b/common-library/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="color_e80036">#e80036</color>
     <color name="color_1f1f1f">#1f1f1f</color>
     <color name="color_f1f1f1">#f1f1f1</color>
+    <color name="color_f9f9f9">#f9f9f9</color>
 </resources>
