--- a/app/src/main/res/layout/activity_talent_homepage.xml
+++ b/app/src/main/res/layout/activity_talent_homepage.xml
@@ -1,56 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:id="@+id/barLayout"
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="48dp">
-
-        <ImageView
-            android:id="@+id/talentMineSettingImg"
-            android:layout_width="@dimen/dp30"
-            android:layout_height="@dimen/dp30"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/dp15"
-            android:scaleType="centerCrop"
-            android:src="@mipmap/icon_setting" />
-
-        <ImageView
-            android:id="@+id/talentMineMsgImg"
-            android:layout_width="@dimen/dp30"
-            android:layout_height="@dimen/dp30"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="@dimen/dp15"
-            android:scaleType="centerCrop"
-            android:src="@mipmap/icon_msg_black" />
-
-        <ImageView
-            android:id="@+id/talentMineEditImg"
-            android:layout_width="@dimen/dp30"
-            android:layout_height="@dimen/dp30"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="@dimen/dp15"
-            android:layout_toLeftOf="@id/talentMineMsgImg"
-            android:scaleType="centerCrop"
-            android:src="@mipmap/icon_edit" />
-
-    </RelativeLayout>
-
-    <ru.noties.scrollable.ScrollableLayout
-        android:id="@+id/talentMineScrollableLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+        android:layout_height="wrap_content"
+        android:background="@color/color_ffffff">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp">
+            android:layout_height="200dp"
+            app:layout_scrollFlags="scroll|enterAlways">
 
             <ImageView
                 android:id="@+id/mineHeadImg"
@@ -81,41 +43,25 @@
 
         </RelativeLayout>
 
-
-        <LinearLayout
+        <android.support.design.widget.TabLayout
+            android:id="@+id/talentMinePagerSlidingTabStrip"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:layout_alignParentBottom="true"
+            android:background="@color/color_ffffff"
+            app:tabIndicatorColor="@color/color_e80036"
+            app:tabIndicatorHeight="@dimen/dp2"
+            app:tabSelectedTextColor="@color/color_1f1f1f"
+            app:tabTextColor="@color/color_666666" />
 
-            <xkh.hzp.xkh.com.base.view.PagerSlidingTabStrip
-                android:id="@+id/talentMinePagerSlidingTabStrip"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/dp45"
-                android:layout_gravity="center_horizontal"
-                app:pstsIndicatiorWidth="@dimen/dp30"
-                app:pstsIndicatorColor="@color/color_ff5555"
-                app:pstsIndicatorHeight="1dp"
-                app:pstsTextColor="@color/color_666666"
-                app:selectedTabTextColor="@color/color_ff5555" />
+    </android.support.design.widget.AppBarLayout>
 
+    <android.support.v4.view.ViewPager
+        android:id="@+id/talentMineViewPager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="0.75dp"
-                android:layout_marginTop="@dimen/dp2"
-                android:background="#dadada" />
+    </android.support.v4.view.ViewPager>
 
-        </LinearLayout>
-
-        <android.support.v4.view.ViewPager
-            android:id="@+id/talentMineViewPager"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        </android.support.v4.view.ViewPager>
-
-    </ru.noties.scrollable.ScrollableLayout>
-
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
