--- a/app/src/main/res/layout/activity_video_dynamic_details.xml
+++ b/app/src/main/res/layout/activity_video_dynamic_details.xml
@@ -80,6 +80,37 @@
                 android:layout_margin="@dimen/dp15"
                 android:text="2017-04-24" />
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp6"
+                android:background="@color/color_f1f1f1" />
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/dp15"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/commentMineImg"
+                    android:layout_width="28dp"
+                    android:layout_height="28dp"
+                    android:layout_weight="0"
+                    android:src="@mipmap/icon_female_selected" />
+
+                <TextView
+                    android:id="@+id/commentTxt"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp25"
+                    android:layout_marginLeft="@dimen/dp20"
+                    android:layout_weight="1"
+                    android:background="@color/color_f1f1f1"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="@dimen/dp10"
+                    android:text="评论" />
+            </LinearLayout>
+
 
             <com.xkh.hzp.xkh.view.CommentExpandableListView
                 android:id="@+id/commentExpandableListView"
