--- a/app/src/main/res/layout/fragment_talent_mine.xml
+++ b/app/src/main/res/layout/fragment_talent_mine.xml
@@ -43,98 +43,85 @@
 
     </RelativeLayout>
 
-    <ru.noties.scrollable.ScrollableLayout
-        android:id="@+id/talentMineScrollableLayout"
+
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="200dp">
-
-            <ImageView
-                android:id="@+id/mineHeadImg"
-                android:layout_width="@dimen/dp50"
-                android:layout_height="@dimen/dp50"
-                android:layout_centerInParent="true"
-                android:src="@drawable/ic_launcher_round" />
-
-            <TextView
-                android:id="@+id/mineNickNameTxt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/mineHeadImg"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="@dimen/dp10"
-                android:text="爱吃糖的羊"
-                android:textColor="@color/color_333333"
-                android:textSize="@dimen/sp_14"
-                android:textStyle="bold" />
-
-
-            <TextView
-                android:id="@+id/mineLoginTxt"
-                android:layout_width="105dp"
-                android:layout_height="32dp"
-                android:layout_centerInParent="true"
-                android:background="@drawable/shape_btn_mine_login_btn"
-                android:gravity="center"
-                android:text="登陆/注册"
-                android:textColor="#fff"
-                android:textSize="18sp"
-                android:visibility="gone" />
-
-            <TextView
-                android:id="@+id/talentUserSignTxt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/mineNickNameTxt"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="@dimen/dp10"
-                android:text="找模特，找模特，找模特，找模特" />
-
-        </RelativeLayout>
-
-
-        <LinearLayout
+        <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:background="@color/color_ffffff">　
 
-            <xkh.hzp.xkh.com.base.view.PagerSlidingTabStrip
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                app:layout_scrollFlags="scroll|enterAlways">
+
+                <ImageView
+                    android:id="@+id/mineHeadImg"
+                    android:layout_width="@dimen/dp50"
+                    android:layout_height="@dimen/dp50"
+                    android:layout_centerInParent="true"
+                    android:src="@drawable/ic_launcher_round" />
+
+                <TextView
+                    android:id="@+id/mineNickNameTxt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/mineHeadImg"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="@dimen/dp10"
+                    android:text="爱吃糖的羊"
+                    android:textColor="@color/color_333333"
+                    android:textSize="@dimen/sp_14"
+                    android:textStyle="bold" />
+
+
+                <TextView
+                    android:id="@+id/mineLoginTxt"
+                    android:layout_width="105dp"
+                    android:layout_height="32dp"
+                    android:layout_centerInParent="true"
+                    android:background="@drawable/shape_btn_mine_login_btn"
+                    android:gravity="center"
+                    android:text="登陆/注册"
+                    android:textColor="#fff"
+                    android:textSize="18sp"
+                    android:visibility="gone" />
+
+                <TextView
+                    android:id="@+id/talentUserSignTxt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/mineNickNameTxt"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="@dimen/dp10"
+                    android:text="找模特，找模特，找模特，找模特" />
+
+            </RelativeLayout>
+
+            <android.support.design.widget.TabLayout
                 android:id="@+id/talentMinePagerSlidingTabStrip"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/dp45"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginLeft="@dimen/dp40"
-                android:layout_marginRight="@dimen/dp40"
-                app:pstsDividerColor="@android:color/transparent"
-                app:pstsIndicatiorWidth="@dimen/dp40"
-                app:pstsIndicatorColor="@color/color_e80036"
-                app:pstsIndicatorHeight="@dimen/dp2"
-                app:pstsShouldExpand="true"
-                app:pstsTextColor="@color/color_666666"
-                app:selectedTabTextColor="@color/color_1f1f1f" />
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:background="@color/color_ffffff"
+                app:tabIndicatorColor="@color/color_e80036"
+                app:tabIndicatorHeight="@dimen/dp2"
+                app:tabSelectedTextColor="@color/color_1f1f1f"
+                app:tabTextColor="@color/color_666666" />
 
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="0.75dp"
-                android:layout_marginTop="@dimen/dp2"
-                android:background="#dadada" />
-
-        </LinearLayout>
+        </android.support.design.widget.AppBarLayout>
 
         <android.support.v4.view.ViewPager
             android:id="@+id/talentMineViewPager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         </android.support.v4.view.ViewPager>
 
-    </ru.noties.scrollable.ScrollableLayout>
+    </android.support.design.widget.CoordinatorLayout>
 
 </LinearLayout>
