--- a/app/src/main/res/layout/view_item_comment_reply_layout.xml
+++ b/app/src/main/res/layout/view_item_comment_reply_layout.xml
@@ -9,16 +9,19 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="48dp"
         android:layout_marginRight="32dp"
-        android:background="#F6F6F6"
+        android:background="@color/color_f9f9f9"
         android:orientation="horizontal"
-        android:padding="@dimen/dp6">
+        android:paddingBottom="@dimen/dp2"
+        android:paddingLeft="@dimen/dp4"
+        android:paddingRight="@dimen/dp4"
+        android:paddingTop="@dimen/dp2">
 
         <TextView
             android:id="@+id/itemReplyUserNameTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="沐风:"
-            android:textColor="#626262"
+            android:textColor="@color/color_ff5555"
             android:textSize="14sp" />
 
         <TextView
@@ -33,5 +36,10 @@
             android:textColor="#949494"
             android:textSize="14sp" />
     </LinearLayout>
+
+    <View
+        android:id="@+id/replySpaceView"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp10" />
 
 </LinearLayout>
