--- a/app/src/main/res/layout/view_item_dynamic.xml
+++ b/app/src/main/res/layout/view_item_dynamic.xml
@@ -47,9 +47,11 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/dp15"
         android:layout_marginRight="@dimen/dp15"
-        android:text="校开花校开花校开花校开花校开花校开花校开花校开花校开花校开花校开花校开花校开花"
-        android:textColor="@color/color_666666"
-        android:textSize="@dimen/sp_14" />
+        android:ellipsize="end"
+        android:lineSpacingExtra="@dimen/dp4"
+        android:lines="3"
+        android:textColor="@color/color_333333"
+        android:textSize="@dimen/sp_16" />
 
     <LinearLayout
         android:id="@+id/dynamicImgContentLayout"
