--- a/app/src/main/res/layout/fragment_people_profile.xml
+++ b/app/src/main/res/layout/fragment_people_profile.xml
@@ -1,76 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/talentPictureRecycleView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp10">
-
-    </android.support.v7.widget.RecyclerView>
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/dp15"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/talentPictureRecycleView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp10">
+
+        </android.support.v7.widget.RecyclerView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/dp15"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/talentHeightTxt"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="身高：170cm" />
+
+            <TextView
+                android:id="@+id/talentWidghtTxt"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="身高：170cm" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dp15"
+            android:layout_marginRight="@dimen/dp15"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/talentMeasurementstTxt"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="三围：90/60/90" />
+
+            <TextView
+                android:id="@+id/talentConstellationTxt"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="星座：白羊座" />
+
+        </LinearLayout>
 
         <TextView
-            android:id="@+id/talentHeightTxt"
-            android:layout_width="0dp"
+            android:id="@+id/talentSpecialtyTxt"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="身高：170cm" />
+            android:layout_margin="@dimen/dp15"
+            android:text="淘宝直播，买家秀，穿搭" />
 
-        <TextView
-            android:id="@+id/talentWidghtTxt"
-            android:layout_width="0dp"
+        <com.zhy.view.flowlayout.TagFlowLayout
+            android:id="@+id/talentLableTagFlowLayout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="身高：170cm" />
+            android:layout_marginLeft="@dimen/dp15"
+            android:layout_marginRight="@dimen/dp15">
+
+        </com.zhy.view.flowlayout.TagFlowLayout>
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/dp15"
-        android:layout_marginRight="@dimen/dp15"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/talentMeasurementstTxt"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="三围：90/60/90" />
-
-        <TextView
-            android:id="@+id/talentConstellationTxt"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="星座：白羊座" />
-
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/talentSpecialtyTxt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/dp15"
-        android:text="淘宝直播，买家秀，穿搭" />
-
-    <com.zhy.view.flowlayout.TagFlowLayout
-        android:id="@+id/talentLableTagFlowLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/dp15"
-        android:layout_marginRight="@dimen/dp15">
-
-    </com.zhy.view.flowlayout.TagFlowLayout>
-
-</LinearLayout>
+</android.support.v4.widget.NestedScrollView>
