--- a/app/src/main/res/layout/fragment_talent_homepage.xml
+++ b/app/src/main/res/layout/fragment_talent_homepage.xml
@@ -44,10 +44,9 @@
         </RelativeLayout>
 
         <android.support.design.widget.TabLayout
-            android:id="@+id/talentMinePagerSlidingTabStrip"
+            android:id="@+id/homePageTabLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
             android:background="@color/color_ffffff"
             app:tabIndicatorColor="@color/color_e80036"
             app:tabIndicatorHeight="@dimen/dp2"
@@ -60,8 +59,6 @@
         android:id="@+id/talentMineViewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-    </android.support.v4.view.ViewPager>
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"></android.support.v4.view.ViewPager>
 
 </android.support.design.widget.CoordinatorLayout>
