--- a/common-library/src/main/res/layout/acitivyt_base.xml
+++ b/common-library/src/main/res/layout/acitivyt_base.xml
@@ -9,12 +9,10 @@
 
     <include layout="@layout/view_base_tool_bar" />
 
-    <LinearLayout
+    <FrameLayout
         android:id="@+id/baseContentLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent" />
 
-    </LinearLayout>
 
 </LinearLayout>
