--- a/common-library/src/main/res/layout/view_no_data.xml
+++ b/common-library/src/main/res/layout/view_no_data.xml
@@ -35,6 +35,6 @@
         android:text="登录/注册"
         android:textColor="#fff"
         android:textSize="16sp"
-        android:visibility="gone" />
+        android:visibility="visible" />
 
 </LinearLayout>
