--- a/app/src/main/res/layout/fragment_dynamic.xml
+++ b/app/src/main/res/layout/fragment_dynamic.xml
@@ -10,8 +10,13 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <View
+            android:id="@+id/statusBarView"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/statusbar_view_height"
+            android:background="@color/color_fb435b" />
+
         <LinearLayout
-            android:id="@+id/searchLayout"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp48"
             android:background="@color/color_fb435b"
@@ -20,6 +25,7 @@
             android:visibility="visible">
 
             <TextView
+                android:id="@+id/searchLayout"
                 android:layout_width="0dp"
                 android:layout_height="30dp"
                 android:layout_centerVertical="true"
@@ -33,6 +39,7 @@
 
 
             <ImageView
+                android:id="@+id/msgImg"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="@dimen/dp15"
