--- a/common-library/src/main/res/values/colors.xml
+++ b/common-library/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="color_333333">#333333</color>
     <color name="color_666666">#666666</color>
     <color name="color_fb435b">#fb435b</color>
+    <color name="color_70fb435b">#70fb435b</color>
     <color name="color_fc4d5e">#fc4d5e</color>
     <color name="color_fd5862">#fd5862</color>
     <color name="color_f3f5fa">#f3f5fa</color>
